scrollbar in profile, fixed nav, did an about page

--- a/src/scss/_home-nav.scss
+++ b/src/scss/_home-nav.scss
@@ -12,6 +12,7 @@ $hover-color: #700845;
   z-index: 100;
   display: grid;
   grid-template-columns: 1fr 3fr;
+  
   a {
     text-decoration: none;
     color: white;
@@ -63,9 +64,25 @@ $hover-color: #700845;
         }
       }
     }
+    
     .nav-user-container {
       border-left: 1px solid $nav-border-color;
       grid-column: 3;
+      a.nav-guest-container {
+        h1 {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          i {
+            font-size: 2rem;
+            margin-right: 5px;
+          }
+          span {
+            font-size: 1.3rem;
+          }
+        }
+      }
       .nav-user-menu-container {
         position: relative;
         $dropdown-height: 130px;
